chore: add eslint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
-        "outDir": "./",
+        "outDir": "./dist",
         "module": "commonjs",
-        "target": "ES2019",
+        "target": "es2019",
         "esModuleInterop": true,
         "allowJs": true
 
