--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,7 @@
 {
     "*.ts":[
-        "eslint 'src/**'"
+        "eslint 'src/**' --fix",
+        "npm run test:staged",
+        "git add"
     ]
 }
