--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.11",
+    "@types/validator": "^13.0.0",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "eslint": "^7.2.0",
     "eslint-config-standard-with-typescript": "^11.0.0",
@@ -31,6 +32,7 @@
     "typescript": "^3.9.5"
   },
   "dependencies": {
-    "jest": "^26.0.1"
+    "jest": "^26.0.1",
+    "validator": "^13.0.0"
   }
 }
